# memedrop

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yaml  tailwind.config.js
assets/templates/: landing.html.tera
migrations/2021-02-21-201038_create_drops/: down.sql  up.sql
public/resources/: code.js
public/templates/: 404.html.tera  landing.html.tera
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: base.html.tera  landing.html.tera
