[package]
name = "memedrop"
version = "0.1.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"

[dependencies]
openssl = "*"
rocket = "0.4.7"
diesel = { version = "1.4.5", features = ["postgres"] }
diesel_geometry = { version = "1.4.0", features = ["postgres"] }
nanoid = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]

[[bin]]
name = "server"
path = "src/main.rs"
