[package]
name = "memedrop"
version = "0.2.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"

[dependencies]
openssl = "*"
rocket = "0.4.7"
diesel = { version = "1.4.5", features = ["postgres"] }
diesel_geometry = { version = "1.4.0", features = ["postgres"] }
nanoid = "0.3.0"
serde = { version = "1", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["serve", "json", "tera_templates", "diesel_postgres_pool"]

[[bin]]
name = "server"
path = "src/main.rs"
